# aws-cdk-golang-exercise

./: BUILD  README.md  WORKSPACE  app.go  app_test.go  cdk.json  deps.bzl  go.mod  go.sum  okteto.yml
.devcontainer/: BUILD  Dockerfile  WORKSPACE
cmd/: BUILD.bazel  main.go
stacks/: BUILD.bazel  stacks.go  types.go
