load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/r351574nc3/aws-cdk-golang-excercise/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_cdk_go_awscdk_v2//:go_default_library",
        "@com_github_aws_constructs_go_constructs_v10//:go_default_library",
    ],
)

go_binary(
    name = "cli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
