load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "stacks.go",
        "types.go",
    ],
    importpath = "github.com/r351574nc3/aws-cdk-golang-excercise/stacks",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_cdk_go_awscdk_v2//:go_default_library",
        "@com_github_aws_aws_cdk_go_awscdk_v2//awsec2:go_default_library",
        "@com_github_aws_constructs_go_constructs_v10//:go_default_library",
        "@com_github_aws_jsii_runtime_go//:go_default_library",
    ],
)
